Adaptation de la disposition

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <img class="mx-auto d-block" src="images/Les_petits_plats_logo.svg" alt="Logo Les petits plats">
-            <h1 class="text-center">Les petits plats</h1>
+            <img class="mx-auto d-block mt-4" src="images/Les_petits_plats_logo.svg" alt="Logo Les petits plats">
+            <h1 class="text-center fw-bold mb-3">Les petits plats</h1>
         </div>
     </div>
 
     <div class="row">
         <div class="col">
-            <div class="input-group">
-                <input type="text" class="form-control">
-                <span class="input-group-text"><i class="bi bi-search"></i></span>
+            <div class="input-group mb-4">
+                <input type="text" class="form-control border-0">
+                <span class="input-group-text border-0"><i class="bi bi-search"></i></span>
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-4">
         <div class="col-auto">
             <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownIngredients" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,24 +60,131 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-3">
-            <div class="card">
+    <div class="row g-4">
+        <div class="col-4">
+            <div class="card rounded border-0">
                 <div class="card-placeholder"></div>
-                <div class="card-body">
+                <div class="card-body px-0">
 
-                    <div class="container">
-                        <div class="row">
+                    <div class="container-fluid g-3">
+                        <div class="row lh-1 mb-1">
                             <div class="col-auto">
-                                <h5 class="card-title">Limonade de coco </h5>
+                                <h2 class="card-title">Limonade de coco </h2>
                             </div>
                             <div class="col text-end">
-                                <i class="bi bi-clock"></i>
+                                <i class="bi bi-clock"></i><strong class="fs-2"> 10 min</strong>
+                            </div>
+                        </div>
+                        <div class="row fs-6 lh-sm">
+                            <div class="col-6">
+                                Lait de coco: 400ml<br/>
+                                Jus de citron: 2<br/>
+                                Crème de coco: 4 cuillières<br/>
+                                Sucre: 20g<br/>
+                                Glaçons: 2
+                            </div>
+                            <div class="col-6 lh-1 line-clamp">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, nostrum!
                             </div>
                         </div>
                     </div>
 
-                    <p class="card-text"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card rounded border-0">
+                <div class="card-placeholder"></div>
+                <div class="card-body px-0">
+
+                    <div class="container-fluid g-3">
+                        <div class="row lh-1 mb-1">
+                            <div class="col-auto">
+                                <h2 class="card-title">Poisson Cru à la tahitienne</h2>
+                            </div>
+                            <div class="col text-end">
+                                <i class="bi bi-clock"></i><strong class="fs-2"> 60 min</strong>
+                            </div>
+                        </div>
+                        <div class="row fs-6 lh-sm">
+                            <div class="col-6">
+                                Lait de coco: 400ml<br/>
+                                Jus de citron: 2<br/>
+                                Crème de coco: 4 cuillières<br/>
+                                Sucre: 20g<br/>
+                                Glaçons: 2
+                            </div>
+                            <div class="col-6 lh-1 line-clamp">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A at corporis distinctio, explicabo fuga, fugit harum ipsum molestiae nihil praesentium quas qui repellendus sequi sit suscipit unde voluptatibus? Consequatur dignissimos dolores enim, maiores nemo nulla sint tempore! Amet ex excepturi fuga neque nobis. Assumenda ea, excepturi inventore itaque iusto maxime.
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card rounded border-0">
+                <div class="card-placeholder"></div>
+                <div class="card-body px-0">
+
+                    <div class="container-fluid g-3">
+                        <div class="row lh-1 mb-1">
+                            <div class="col-auto">
+                                <h2 class="card-title">Limonade de coco </h2>
+                            </div>
+                            <div class="col text-end">
+                                <i class="bi bi-clock"></i><strong class="fs-2"> 10 min</strong>
+                            </div>
+                        </div>
+                        <div class="row fs-6 lh-sm">
+                            <div class="col-6">
+                                Lait de coco: 400ml<br/>
+                                Jus de citron: 2<br/>
+                                Crème de coco: 4 cuillières<br/>
+                                Sucre: 20g<br/>
+                                Glaçons: 2
+                            </div>
+                            <div class="col-6 lh-1 line-clamp">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, nostrum!
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card rounded border-0">
+                <div class="card-placeholder"></div>
+                <div class="card-body px-0">
+
+                    <div class="container-fluid g-3">
+                        <div class="row lh-1 mb-1">
+                            <div class="col-auto">
+                                <h2 class="card-title">Limonade de coco </h2>
+                            </div>
+                            <div class="col text-end">
+                                <i class="bi bi-clock"></i><strong class="fs-2"> 10 min</strong>
+                            </div>
+                        </div>
+                        <div class="row fs-6">
+                            <div class="col-6 lh-sm">
+                                Lait de coco: 400ml<br/>
+                                Jus de citron: 2<br/>
+                                Crème de coco: 4 cuillières<br/>
+                                Sucre: 20g<br/>
+                                Glaçons: 2
+                            </div>
+                            <div class="col-6 lh-1 line-clamp">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, nostrum!
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
