Icones drop down en CSS

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                                 <i class="bi bi-clock"></i><strong class="fs-2"> 10 min</strong>
                             </div>
                         </div>
-                        <div class="row fs-6 lh-sm">
+                        <div class="row fs-6 lh-sm gx-2">
                             <div class="col-6">
-                                Lait de coco: 400ml<br/>
-                                Jus de citron: 2<br/>
-                                Crème de coco: 4 cuillières<br/>
-                                Sucre: 20g<br/>
-                                Glaçons: 2
+                                <strong>Lait de coco:</strong> 400ml<br/>
+                                <strong>Jus de citron:</strong> 2<br/>
+                                <strong>Crème de coco:</strong> 4 cuillières<br/>
+                                <strong>Sucre:</strong> 20g<br/>
+                                <strong>Glaçons:</strong> 2
                             </div>
                             <div class="col-6 lh-1 line-clamp">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, nostrum!
@@ -107,13 +107,13 @@
                                 <i class="bi bi-clock"></i><strong class="fs-2"> 60 min</strong>
                             </div>
                         </div>
-                        <div class="row fs-6 lh-sm">
+                        <div class="row fs-6 lh-sm gx-2">
                             <div class="col-6">
-                                Lait de coco: 400ml<br/>
-                                Jus de citron: 2<br/>
-                                Crème de coco: 4 cuillières<br/>
-                                Sucre: 20g<br/>
-                                Glaçons: 2
+                                <strong>Thon Rouge (ou blanc):</strong> 200g<br/>
+                                <strong>Concombre:</strong> 1<br/>
+                                <strong>Tomate:</strong> 2<br/>
+                                <strong>Citron Vert:</strong> 5<br/>
+                                <strong>Lait de coco:</strong> 100ml
                             </div>
                             <div class="col-6 lh-1 line-clamp">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. A at corporis distinctio, explicabo fuga, fugit harum ipsum molestiae nihil praesentium quas qui repellendus sequi sit suscipit unde voluptatibus? Consequatur dignissimos dolores enim, maiores nemo nulla sint tempore! Amet ex excepturi fuga neque nobis. Assumenda ea, excepturi inventore itaque iusto maxime.
@@ -139,13 +139,13 @@
                                 <i class="bi bi-clock"></i><strong class="fs-2"> 10 min</strong>
                             </div>
                         </div>
-                        <div class="row fs-6 lh-sm">
+                        <div class="row fs-6 lh-sm gx-2">
                             <div class="col-6">
-                                Lait de coco: 400ml<br/>
-                                Jus de citron: 2<br/>
-                                Crème de coco: 4 cuillières<br/>
-                                Sucre: 20g<br/>
-                                Glaçons: 2
+                                <strong>Lait de coco:</strong> 400ml<br/>
+                                <strong>Jus de citron:</strong> 2<br/>
+                                <strong>Crème de coco:</strong> 4 cuillières<br/>
+                                <strong>Sucre:</strong> 20g<br/>
+                                <strong>Glaçons:</strong> 2
                             </div>
                             <div class="col-6 lh-1 line-clamp">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, nostrum!
@@ -171,13 +171,13 @@
                                 <i class="bi bi-clock"></i><strong class="fs-2"> 10 min</strong>
                             </div>
                         </div>
-                        <div class="row fs-6">
-                            <div class="col-6 lh-sm">
-                                Lait de coco: 400ml<br/>
-                                Jus de citron: 2<br/>
-                                Crème de coco: 4 cuillières<br/>
-                                Sucre: 20g<br/>
-                                Glaçons: 2
+                        <div class="row fs-6 lh-sm gx-2">
+                            <div class="col-6">
+                                <strong>Lait de coco:</strong> 400ml<br/>
+                                <strong>Jus de citron:</strong> 2<br/>
+                                <strong>Crème de coco:</strong> 4 cuillières<br/>
+                                <strong>Sucre:</strong> 20g<br/>
+                                <strong>Glaçons:</strong> 2
                             </div>
                             <div class="col-6 lh-1 line-clamp">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, nostrum!
