--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
     </div>
 </div>
 
+<script type="module" src="research.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
