Affichage recherche globale

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col">
             <div class="input-group mb-4">
-                <input type="text" class="form-control border-0">
+                <input type="text" class="form-control border-0" name="main-search" id="main-search">
                 <span class="input-group-text border-0"><i class="bi bi-search"></i></span>
             </div>
         </div>
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <div class="row g-4">
+    <div class="row g-4" id="recipes-container">
         <div class="col-4">
             <div class="card rounded border-0">
                 <div class="card-placeholder"></div>
