Dropdown avec input et liste

--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
                 <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownIngredients" data-bs-toggle="dropdown" aria-expanded="false">
                     Ingrédients
                 </button>
+                <ul class="dropdown-menu bg-primary rounded">
+                    <input type="text" class="bg-primary w-100 dropdown-input" placeholder="Rechercher un ingrédient">
+                    <ul class="list-group list-group-horizontal">
+                        <li class="list-group-item dropdown-item bg-primary">Lait de coco</li>
+                        <li class="list-group-item dropdown-item bg-primary">Jus de citron</li>
+                        <li class="list-group-item dropdown-item bg-primary">Crème de coco</li>
+                    </ul>
+                    <ul class="list-group list-group-horizontal">
+                        <li class="list-group-item dropdown-item bg-primary">Lait de coco</li>
+                        <li class="list-group-item dropdown-item bg-primary">Jus de citron</li>
+                        <li class="list-group-item dropdown-item bg-primary">Crème de coco</li>
+                    </ul>
+                </ul>
             </div>
         </div>
 
@@ -48,6 +61,14 @@
                 <button class="btn btn-success dropdown-toggle" type="button" id="dropdownAppareils" data-bs-toggle="dropdown" aria-expanded="false">
                     Appareils
                 </button>
+                <ul class="dropdown-menu bg-success rounded">
+                    <input type="text" class="bg-success w-100 dropdown-input" placeholder="Rechercher un appareil">
+                    <ul class="list-group list-group-horizontal">
+                        <li class="list-group-item dropdown-item bg-success">Blender</li>
+                        <li class="list-group-item dropdown-item bg-success">Saladier</li>
+                        <li class="list-group-item dropdown-item bg-success">Cocotte</li>
+                    </ul>
+                </ul>
             </div>
         </div>
 
@@ -56,6 +77,17 @@
                 <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownUstensiles" data-bs-toggle="dropdown" aria-expanded="false">
                     Ustensiles
                 </button>
+                <ul class="dropdown-menu bg-danger rounded">
+                    <input type="text" class="bg-danger w-100 dropdown-input" placeholder="Rechercher un ustensile">
+                    <ul class="list-group list-group-horizontal">
+                        <li class="list-group-item dropdown-item bg-danger">couteau</li>
+                        <li class="list-group-item dropdown-item bg-danger">presse citron</li>
+                        <li class="list-group-item dropdown-item bg-danger">verres</li>
+                    </ul>
+                    <ul class="list-group list-group-horizontal">
+                        <li class="list-group-item dropdown-item bg-danger">cuillière à soupe</li>
+                    </ul>
+                </ul>
             </div>
         </div>
     </div>
