--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <template id="js-tag">
-        <div class="alert alert-dismissible fade show d-inline-block fw-bold">
+        <div class="alert alert-dismissible fade show d-inline-block fw-bold js-keyword-tag">
             <span class="tag-text"></span>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
         </div>
